# vertd

./: .gitignore  Cargo.toml  package.json
desktop/: .prettierignore  expanded-converters-mod.rs  package.json  postcss.config.mjs  tsconfig.json  vite.config.js
desktop/src/: app.css  app.d.ts  app.html  bindings.ts  utilities.css
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  manager.rs
desktop/src-tauri/src/converters/: converters.rs  error.rs  macros.rs  mod.rs  options.rs  progress.rs  video copy.rs  video.rs
desktop/src-tauri/src/platform/: macos.rs  mod.rs
desktop/src/lib/animation/: index.ts
desktop/src/lib/components/: BottomPanel.svelte  DropArea.svelte  Header.svelte  Navbar.svelte  Panel.svelte
desktop/src/lib/store/: index.svelte.ts
desktop/src/routes/: +layout.svelte  +layout.ts  +page.svelte
desktop/src/routes/convert/: +page.svelte
desktop/swift-lib/: Package.resolved  Package.swift
desktop/swift-lib/Sources/VertSwiftLib/: VertSwiftLib.swift
server/: Cargo.toml
server/src/: main.rs
server/src/services/: download.rs  upload.rs  version.rs  websocket.rs
vertd/: Cargo.toml
vertd/src/converter/: mod.rs
