[workspace]
resolver = "2"
members = ["vertd", "server", "desktop/src-tauri"]

[workspace.dependencies]
log = "0.4.25"
anyhow = "1.0.95"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "process",
    "fs",
    "io-util",
] }
uuid = { version = "1.13.1", features = ["v4", "fast-rng", "serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
rbtag = "0.3.0"
