[package]
name = "vertd"
version = "0.1.0"
edition = "2024"

[lib]
name = "vertd"

[dependencies]
strum = "0.27.1"
strum_macros = "0.27.1"
wgpu = "24.0.1"

log = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rbtag = { workspace = true }
