[package]
name = "vert-desktop"
version = "0.1.0"
description = "The file converter you'll love."
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vert_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.4.1", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2.2.3"

[target."cfg(target_os = \"macos\")".dependencies]
objc2-app-kit = { version = "0.3.0" }

serde = { workspace = true }
serde_json = { workspace = true }

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols

[profile.dev]
debug = 0
strip = "debuginfo"
# build-override.debug = true
